# edon

./: .gitignore  LICENSE  README.md  pyproject.toml
src/edon/: __init__.py  cli.py  codec.py  demo.py
src/edon/codec/: __init__.py  codec.py
tests/: __init__.py  test_codec.py  test_roundtrip.py
tests/data/: complex.json
